# udp-socket-service

./: .gitignore  Cargo.toml  README.md  README.mk  justfile
clients/: request.py
config/: client-config.toml  piedmont-config.toml  rolling.yaml  server-config.toml
data/: config.kv  users.kv
docker/: .gitignore  Dockerfile  build.sh  copy.sh  run.sh
docker/home/dpw/: .bashrc  .gitconfig  .motd  .pythonrc.py  .vimrc  post-install.sh
docker/home/dpw/.config/nvim/: init.vim
docker/home/dpw/.ssh/: known_hosts
docker/home/dpw/config/: rolling.yaml  server-config.toml
src/: client.rs  config.rs  handler.rs  lib.rs  parsers.rs  server.rs
tests/: .gitignore  now.sh  ping.py  ping.sh  server-config.toml  status.sh  users-ref.kv
